--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@ set -g prefix C-a
 bind-key C-a send-prefix
 unbind C-b
 
+set -g history-limit 49152
 set -g visual-activity on
 set -g base-index 1
 set -g pane-base-index 1
@@ -37,6 +38,8 @@ bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 bind-key v split-window -v -c "#{pane_current_path}"
 bind-key b split-window -h -c "#{pane_current_path}"
+
+bind-key B resize-pane -D 18
 
 bind h select-pane -L
 bind j select-pane -D
