Update tmux config

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,15 +1,13 @@
 set -g prefix C-a
+unbind-key C-b
 bind-key C-a send-prefix
-unbind C-b
 
 set -g history-limit 49152
 set -g base-index 1
 set -g pane-base-index 1
-set -g default-terminal "tmux-256color"
+set -g default-terminal "tmux"
 set -g renumber-windows on
 set -s escape-time 0
-set -g monitor-activity off
-set -g visual-activity off
 set -g status-keys vi
 set -g mode-keys vi
 set -g mouse on
@@ -31,24 +29,13 @@ set-window-option -g window-status-activity-style fg=colour9,bg=default
 set-window-option -g window-status-style fg=colour240,bg=default
 set-window-option -g window-status-current-style fg=colour4,bold,bg=default
 
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection
-bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
-
-bind-key v split-window -v -c "#{pane_current_path}"
+bind-key v split-window -c "#{pane_current_path}"
 bind-key b split-window -h -c "#{pane_current_path}"
 
-bind-key B resize-pane -D 18
-
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-
-bind H resize-pane -L 2
-bind J resize-pane -D 2
-bind K resize-pane -U 2
-bind L resize-pane -R 2
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
 
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
         | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
