--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,8 @@ bind-key C-a send-prefix
 set -g history-limit 49152
 set -g base-index 1
 set -g pane-base-index 1
-set -g default-terminal "tmux"
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g renumber-windows on
 set -s escape-time 0
 set -g status-keys vi
