--- a/.curlrc
+++ b/.curlrc
@@ -1,6 +1,8 @@
-connect-timeout = 60
+user-agent = "Mozilla/5.0 (Windows NT 10.0; rv:68.0) Gecko/20100101 Firefox/68.0"
+connect-timeout = 10
 location
 progress-bar
 show-error
-user-agent = "Mozilla/5.0 (compatible; MSIE 9.0; Windows NT 6.1; Trident/5.0)"
 referer = ";auto"
+remote-time
+compressed
