--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,7 @@ set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
 
+set -g allow-passthrough on
 set -g history-limit 49152
 set -g base-index 1
 set -g pane-base-index 1
