Add OSC52 support to tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,6 +2,8 @@ set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
 
+set -s set-clipboard on
+set -as terminal-features ",xterm-256color;clipboard"
 set -g allow-passthrough on
 set -g history-limit 49152
 set -g base-index 1
