--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,14 +2,12 @@ set -g prefix C-a
 unbind-key C-b
 bind-key C-a send-prefix
 
-set -s set-clipboard on
-set -as terminal-features ",xterm-256color;clipboard"
 set -g allow-passthrough on
 set -g history-limit 49152
 set -g base-index 1
 set -g pane-base-index 1
 set -g default-terminal "xterm-256color"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -ag terminal-overrides ",xterm-256color:Tc"
 set -g renumber-windows on
 set -s escape-time 0
 set -g status-keys vi
@@ -29,12 +27,14 @@ set -g status-right-length 40
 set -g status-left ' '
 set -g status-right '#(tmux-mem-cpu-load -g 0 --interval 2) #[fg=colour4]#[bold]%H:%M'
 
-set-window-option -g window-status-activity-style fg=colour9,bg=default
-set-window-option -g window-status-style fg=colour240,bg=default
-set-window-option -g window-status-current-style fg=colour4,bold,bg=default
+setw -g window-status-activity-style fg=colour9,bg=default
+setw -g window-status-style fg=colour240,bg=default
+setw -g window-status-current-style fg=colour4,bold,bg=default
 
 bind-key v split-window -c "#{pane_current_path}"
 bind-key b split-window -h -c "#{pane_current_path}"
+
+bind-key H resize-pane -D 18
 
 bind-key h select-pane -L
 bind-key j select-pane -D
